@@ -619,6 +619,7 @@ lib/gecoder/interface/constraints/bool_enum/extensional.rb -text
 lib/gecoder/interface/constraints/bool_enum/relation.rb -text
 lib/gecoder/interface/constraints/bool_enum_constraints.rb -text
 lib/gecoder/interface/constraints/bool_var_constraints.rb -text
+lib/gecoder/interface/constraints/extensional_regexp.rb -text
 lib/gecoder/interface/constraints/int/arithmetic.rb -text
 lib/gecoder/interface/constraints/int/channel.rb -text
 lib/gecoder/interface/constraints/int/domain.rb -text
