@@ -509,3 +509,4 @@ require 'gecoder/interface/constraints/bool_var_constraints'
 require 'gecoder/interface/constraints/bool_enum_constraints'
 require 'gecoder/interface/constraints/set_var_constraints'
 require 'gecoder/interface/constraints/set_enum_constraints'
+require 'gecoder/interface/constraints/extensional_regexp'
