@@ -6,6 +6,7 @@
 * The domain when construction arrays and matrices of int variables now default to the same as when creating single variables (the largest possible domain).
 * Model#branch_on now accepts single variables as well as enums.
 * Added channel constraints between single set variables and enumerations of boolean variables.
+* Added integer regular expression constraint. Thanks goes to Eivind Eklund for providing the idea for the syntax used to specify the regular expressions.
 
 == Version 0.8.2
 This release adds search statistics along with some new arithmetic constraints 
